k8s.yml
---
apiVersion: v1
kind: Service
metadata:
  name: computeshare-server
spec:
  selector:
    app: computeshare-server
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http
      port: 8000
      targetPort: 8000
    - protocol: TCP
      name: grpc
      port: 9000
      targetPort: 9000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: computeshare-server
  labels:
    app: computeshare-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: computeshare-server
  template:
    metadata:
      labels:
        app: computeshare-server
    spec:
      containers:
        - name: computeshare-server
          image: hamstershare/computeshare-server:${PIPELINE_ID}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 9000
              name: grpc
          volumeMounts:
            - mountPath: /data/conf
              name: config
      volumes:
        - name: config
          configMap:
            # Provide the name of the ConfigMap you want to mount.
            name: config
            # An array of keys from the ConfigMap to create as files
            items:
              - key: "config.yaml"
                path: "config.yaml"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
  name: computeshare-server
spec:
  ingressClassName: nginx
  rules:
    - host: api.computeshare.newtouch.com
      http:
        paths:
          - backend:
              service:
                name: computeshare-server
                port:
                  number: 8000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - api.computeshare.newtouch.com
      secretName: computeshare-server-tls
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql
  name: mysql
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mysql
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mysql
    spec:
      containers:
        - env:
            - name: MYSQL_ROOT_PASSWORD
              value: Aline123456
          image: mysql:8.0.19
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - mysqladmin
                - -uroot
                - -p${MYSQL_ROOT_PASSWORD}
                - ping
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          name: mysql
          ports:
            - containerPort: 3306
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - mysqladmin
                - -uroot
                - -p${MYSQL_ROOT_PASSWORD}
                - ping
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              cpu: "2"
              memory: 1Gi
            requests:
              cpu: "1"
              memory: 512Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: data
            - mountPath: /etc/mysql/conf.d/my.cnf
              name: config
              subPath: my.cnf
            - mountPath: /etc/localtime
              name: localtime
              readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mysql
        - configMap:
            defaultMode: 420
            name: mysql-config
          name: config
        - hostPath:
            path: /etc/localtime
            type: File
          name: localtime

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql
  name: mysql
spec:
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: 3306
      nodePort: 31252
  selector:
    app: mysql
  sessionAffinity: None
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: redis
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: redis
    spec:
      containers:
        - image: redis:7
          imagePullPolicy: IfNotPresent
          name: redis
          ports:
            - containerPort: 6379
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
  name: redis
spec:
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: redis
  sessionAffinity: None
  type: ClusterIP
